--- a/resources/main.css
+++ b/resources/main.css
@@ -127,9 +127,12 @@ section {
     bottom: 0;
     left: 0;
     right: 0;
+    
 }
 
-
+nav li a.selected{
+    border-bottom: 7px solid rgb(233,224,217);
+}
 .orders-container, img[alt~="vip"] {
     z-index: 4;
 }
