--- a/resources/main.css
+++ b/resources/main.css
@@ -119,10 +119,14 @@ ul li:nth-child(n+2) {
     padding: 5px 6px;
    
 }
+#imgBig, #ProductOrderImage,
+.more-products-order img,
+ul a, #seeOrderDetailsBtn a{
+    cursor: pointer;
+}
 
 ul a, #seeOrderDetailsBtn a {
     text-decoration: none;
-    cursor: pointer;
 }
 
 section {
@@ -362,4 +366,30 @@ form .addresses-inputs div{
 
 .hidden {
     display: none;
+}
+
+#overlay{
+    position: fixed; 
+    width: 100%; 
+    height: 100%; 
+    top: 0px; 
+    left: 0px; 
+    background-color: #000; 
+    opacity: 0.7;
+    filter: alpha(opacity = 70) !important;
+    display: none;
+    z-index: 100;
+
+}
+
+#overlayContent{
+    position: fixed; 
+    width: 100%;
+    top: 100px;
+    display: none;
+    overflow: hidden;
+    z-index: 100;
+}
+#imgBig{
+    width: 550px;
 }
